css/style.css
#initial-box {
  width: 400px;
  height: 300px;
  background: #FFF;
  text-align: center;
  position: absolute;
  margin-left: -75px;
  margin-top: -75px;
  left: 40%;
  top: 30%;
  z-index: 20;
}

#screen {
  position: absolute;
  width: 100%;
  height: 120%;
  background: #000;
}

header {
  width: 100%;
  height: 80px;
  text-align: center;
}

.main-body {
  width: 100%;
  height: 400px;
}

footer {
  display: inline-block;
  width: 100%;
  height: 190px;
}

.main-left {
  display: inline-block;
  width: 23.5%;
  height: 400px;
}

.main-center {
  display: inline-block;
  width: 50%;
  height: 400px;
}

.main-right {
  display: inline-block;
  width: 23.5%;
  height: 400px;
}

.bottom-left {
  display: inline-block;
  width: 23.5%;
  height: 180px;
  vertical-align: top;
  padding: 15px;
}

.bottom-center {
  display: inline-block;
  width: 50%;
  height: 180px;
}

.bottom-right {
  display: inline-block;
  width: 23.5%;
  height: 180px;
  vertical-align: top;
}

.wpm {
  display: block;
  width: 200px;
  height: 20px;
  margin: 0 5px 5px 15px;
}

.accuracy {
  display: block;
  width: 200px;
  height: 20px;
  margin: 5px 5px 5px 15px;

}

.timer {
  display: block;
  width: 200px;
  height: 20px;
  margin: 5px 5px 5px 15px;

}

.text-display {
  display: inline-block;
  width: 600px;
  height: 350px;
  margin: 20px 30px 40px 60px;
  font-family: 'Libre Baskerville', serif;
  font-size: 15px;
  line-height: 1.5;
  text-align: justify;
}

.level-player-select {
  display: none;
  position: relative;
  width: 700px;
  height: 400px;
}

.typing-input {
  display: inline-block;
  width: 620px;
  height: 150px;
  margin: 15px;
  font-family: 'Oswald', sans-serif;
  font-size: 14px;
  letter-spacing: 2px;
}

.setup {
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 14px;
  width: 80px;
  height: 28px;
  margin: 10px 20px 50px 20px;
  border: 2px solid black;
  text-align: center;
}

.scoreboard {
  font-family: 'Oswald', sans-serif;
  font-size: 14px;
  font-weight: bold;
}

.player-typing {
  width: 600px;
  height: 120px;
  margin: 15px;
  font-family: 'Oswald', sans-serif;
  font-size: 14px;
  border: 1px solid black;
}

.in-game-functions {
  display: inline-block;
  font-family: 'Oswald', sans-serif;
  font-size: 14px;
  font-weight: bold;
  border: 2px solid black;
  text-align: center;
  margin-left: 440px;
  width: 80px;
  height: 28px;
}

